ステージデータ入れた

--- a/BuckUp/P+P/Assembly-CSharp.csproj
+++ b/BuckUp/P+P/Assembly-CSharp.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Assets\Scripts\count.cs" />
     <Compile Include="Assets\Scripts\Enemy_Escape.cs" />
     <Compile Include="Assets\Scripts\Enemy_pop.cs" />
+    <Compile Include="Assets\Scripts\EnemyCollapse.cs" />
     <Compile Include="Assets\Scripts\Engine.cs" />
     <Compile Include="Assets\Scripts\enmydisp.cs" />
     <Compile Include="Assets\Scripts\fpPlayercamera.cs" />
@@ -98,6 +99,12 @@
     <Compile Include="Assets\Scripts\playertarget.cs" />
     <Compile Include="Assets\Scripts\score.cs" />
     <Compile Include="Assets\Scripts\SelfManagementOfTrackedDevices.cs" />
+    <Compile Include="Assets\Scripts\Stage_Scripts\destroy.cs" />
+    <Compile Include="Assets\Scripts\Stage_Scripts\flore.cs" />
+    <Compile Include="Assets\Scripts\Stage_Scripts\move.cs" />
+    <Compile Include="Assets\Scripts\Stage_Scripts\xm.cs" />
+    <Compile Include="Assets\Scripts\Stage_Scripts\xp.cs" />
+    <Compile Include="Assets\Scripts\Stage_Scripts\zm.cs" />
     <Compile Include="Assets\Scripts\Test.cs" />
     <Compile Include="Assets\Scripts\time.cs" />
     <Compile Include="Assets\Scripts\timer.cs" />
