--- a/BuckUp/P+P/Assembly-CSharp.csproj
+++ b/BuckUp/P+P/Assembly-CSharp.csproj
@@ -62,6 +62,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\ballon.cs" />
+    <Compile Include="Assets\Plefabs\Stage_Prefabs\destroy.cs" />
+    <Compile Include="Assets\Plefabs\Stage_Prefabs\flore.cs" />
+    <Compile Include="Assets\Plefabs\Stage_Prefabs\move.cs" />
+    <Compile Include="Assets\Plefabs\Stage_Prefabs\xm.cs" />
+    <Compile Include="Assets\Plefabs\Stage_Prefabs\xp.cs" />
+    <Compile Include="Assets\Plefabs\Stage_Prefabs\zm.cs" />
+    <Compile Include="Assets\Plefabs\Stage_Prefabs\zp.cs" />
     <Compile Include="Assets\SAColliderBuilder\Scripts\Internal\SABoneColliderCommon.cs" />
     <Compile Include="Assets\SAColliderBuilder\Scripts\Internal\SAColliderBuilderCommon.cs" />
     <Compile Include="Assets\SAColliderBuilder\Scripts\Internal\SAMeshColliderCommon.cs" />
