ステージ少し変わった

--- a/BuckUp/P+P/Assembly-CSharp.csproj
+++ b/BuckUp/P+P/Assembly-CSharp.csproj
@@ -62,13 +62,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\ballon.cs" />
-    <Compile Include="Assets\Plefabs\Stage_Prefabs\destroy.cs" />
-    <Compile Include="Assets\Plefabs\Stage_Prefabs\flore.cs" />
-    <Compile Include="Assets\Plefabs\Stage_Prefabs\move.cs" />
-    <Compile Include="Assets\Plefabs\Stage_Prefabs\xm.cs" />
-    <Compile Include="Assets\Plefabs\Stage_Prefabs\xp.cs" />
-    <Compile Include="Assets\Plefabs\Stage_Prefabs\zm.cs" />
-    <Compile Include="Assets\Plefabs\Stage_Prefabs\zp.cs" />
     <Compile Include="Assets\SAColliderBuilder\Scripts\Internal\SABoneColliderCommon.cs" />
     <Compile Include="Assets\SAColliderBuilder\Scripts\Internal\SAColliderBuilderCommon.cs" />
     <Compile Include="Assets\SAColliderBuilder\Scripts\Internal\SAMeshColliderCommon.cs" />
@@ -106,6 +99,13 @@
     <Compile Include="Assets\Scripts\playertarget.cs" />
     <Compile Include="Assets\Scripts\score.cs" />
     <Compile Include="Assets\Scripts\SelfManagementOfTrackedDevices.cs" />
+    <Compile Include="Assets\Scripts\Stage_Scripts\destroy.cs" />
+    <Compile Include="Assets\Scripts\Stage_Scripts\flore.cs" />
+    <Compile Include="Assets\Scripts\Stage_Scripts\move.cs" />
+    <Compile Include="Assets\Scripts\Stage_Scripts\xm.cs" />
+    <Compile Include="Assets\Scripts\Stage_Scripts\xp.cs" />
+    <Compile Include="Assets\Scripts\Stage_Scripts\zm.cs" />
+    <Compile Include="Assets\Scripts\Stage_Scripts\zp.cs" />
     <Compile Include="Assets\Scripts\Test.cs" />
     <Compile Include="Assets\Scripts\time.cs" />
     <Compile Include="Assets\Scripts\timer.cs" />
