--- a/BuckUp/P+P/Assembly-CSharp.csproj
+++ b/BuckUp/P+P/Assembly-CSharp.csproj
@@ -62,6 +62,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\ballon.cs" />
+    <Compile Include="Assets\Models\result\result.cs" />
+    <Compile Include="Assets\Models\result\Result_Score.cs" />
     <Compile Include="Assets\Models\Title\bikeSride.cs" />
     <Compile Include="Assets\Models\Title\title.cs" />
     <Compile Include="Assets\Plefabs\Stage_Prefabs\xm2.cs" />
